@@ -1,3 +1,12 @@
+2008-01-18  Markus Deuling  <deuling@de.ibm.com>
+
+	* jv-exp.y (yylex): Replace DEPRECATED_STREQN with the appropriate
+	function calls.
+	* m2-exp.y (yylex): Likewise.
+	* objc-exp.y (yylex): Likewise.
+
+	* defs.h (DEPRECATED_STREQN): Remove.
+
 2008-01-17  H.J. Lu  <hjl.tools@gmail.com>
 
 	* MAINTAINERS: Update my email address.
